--- a/login.html
+++ b/login.html
@@ -115,7 +115,7 @@
     <br>
 
     <div class="container">
-        <form action="home.html">
+        <form action="index.php">
             <div class="row">
                 <div class="container">
                     <h2 class="text-center">
