--- a/login.html
+++ b/login.html
@@ -115,7 +115,7 @@
     <br>
 
     <div class="container">
-        <form action="index.php">
+        <form action="home.html">
             <div class="row">
                 <div class="container">
                     <h2 class="text-center">
@@ -143,7 +143,7 @@
 
                         <hr>
                         <div class="clearfix">
-                            <a href="main.html" class="button button1">Cancel</a>
+                            <a href="index.php" class="button button1">Cancel</a>
                         </div>
                     </center>
     </div>
